<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ARCompany.Tas_ixBrowser.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tools"
        android:name="com.ARCompany.Tas_ixBrowser.ui.tools.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/navigation_browser"
        android:name="com.ARCompany.Tas_ixBrowser.ui.browser.BrowserFragment"
        android:label="@string/title_browser"
        tools:layout="@layout/fragment_browser" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.ARCompany.Tas_ixBrowser.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>