<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/theme_black_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            style="@style/TextView.Title"
            android:textColor="#000000"
            android:text="@string/theme_black"
            android:layout_gravity="center"
            android:layout_weight="0.8"/>
        <ImageView
            android:id="@+id/theme_black_icon"
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/theme_green_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            style="@style/TextView.Title"
            android:textColor="#000000"
            android:text="@string/theme_green"
            android:layout_gravity="center"
            android:layout_weight="0.8"/>
        <ImageView
            android:id="@+id/theme_green_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/theme_blue_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            style="@style/TextView.Title"
            android:textColor="#000000"
            android:text="@string/theme_blue"
            android:layout_gravity="center"
            android:layout_weight="0.8"/>
        <ImageView
            android:id="@+id/theme_blue_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/theme_red_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            style="@style/TextView.Title"
            android:textColor="#000000"
            android:text="@string/theme_red"
            android:layout_gravity="center"
            android:layout_weight="0.8"/>
        <ImageView
            android:id="@+id/theme_red_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/theme_pink_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            style="@style/TextView.Title"
            android:textColor="#000000"
            android:text="@string/theme_pink"
            android:layout_gravity="center"
            android:layout_weight="0.8"/>
        <ImageView
            android:id="@+id/theme_pink_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/theme_brown_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            style="@style/TextView.Title"
            android:textColor="#000000"
            android:text="@string/theme_brown"
            android:layout_gravity="center"
            android:layout_weight="0.8"/>
        <ImageView
            android:id="@+id/theme_brown_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </LinearLayout>
</LinearLayout>