<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/rate_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">
                <ImageView
                    android:id="@+id/icon_rate"
                    android:background="@drawable/ic_star_black_24dp"
                    style="@style/ImageView.Icon"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_gravity="center"
                    android:paddingStart="10dp"
                    style="@style/TextView.Title"
                    android:text="@string/rate_app"/>
            </LinearLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/textColor" />

            <LinearLayout
                android:id="@+id/share_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">
                <ImageView
                    android:id="@+id/icon_share"
                    android:background="@drawable/ic_share_black_24dp"
                    style="@style/ImageView.Icon"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_gravity="center"
                    android:paddingStart="10dp"
                    style="@style/TextView.Title"
                    android:text="@string/share_app"/>
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/textColor" /><LinearLayout
            android:id="@+id/send_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">
            <ImageView
                android:id="@+id/icon_send"
                android:background="@drawable/ic_send_black_24dp"
                style="@style/ImageView.Icon"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                style="@style/TextView.Title"
                android:text="@string/send_message"/>
        </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/textColor" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app_text"
                android:textColor="@color/textColor"
                android:padding="20dp"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>